Typos in bib file

--- a/doc/distrat.bib
+++ b/doc/distrat.bib
@@ -2,7 +2,7 @@
 @Book{		  pressetal88:book,
   address	= {Cambridge},
   author	= {Press, William H and Flannery, Brian P. and Teukolsky,
-		  Saul A. and (Author), William T. Vetterling},
+		  Saul A. and William T. Vetterling},
   call-number	= {QA76.73.C15},
   date-added	= {2016-11-23 21:22:56 +0000},
   date-modified	= {2016-11-23 21:26:41 +0000},
@@ -12,21 +12,7 @@
   library-id	= {87033844},
   publisher	= {Cambridge University Press},
   title		= {Numerical recipes in C: the art of scientific computing},
-  year		= {1988},
-  annote	= {LDR 00889nam 2200253 a 4500 001 1479204 005
-		  19880701162729.5 008 880609s1988 enka b 001 0 eng 035
-		  $9(DLC) 87033844 906
-		  $a7$bcbc$corignew$d1$eocip$f19$gy-gencatlg 010 $a 87033844
-		  020 $a052135465X 020 $a0521354668 (diskette) 040
-		  $aDLC$cDLC$dDLC 050 00 $aQA76.73.C15$bN865 1988 082 00
-		  $a005.13/3$219 245 00 $aNumerical recipes in C :$bthe art
-		  of scientific computing /$cWilliam H. Press ... [et al.].
-		  260 $aCambridge [Cambridgeshire] ;$aNew York :$bCambridge
-		  University Press,$c1988. 300 $axxii, 735 p.:$bill. ;$c24
-		  cm. 504 $aBibliography: p. 689-693. 500 $aIncludes index.
-		  650 0 $aC (Computer program language) 700 1 $aPress,
-		  William H. 991 $bc-GenColl$hQA76.73.C15$iN865
-		  1988$p00000217001$tCopy 1$wBOOKS }
+  year		= {1988}
 }
 
 @Book{		  wallschwartz91:camel,
@@ -44,27 +30,6 @@
   title		= {Programming Perl},
   url		= {http://www.loc.gov/catdir/enhancements/fy0915/94114950-b.html},
   year		= {1991},
-  annote	= {LDR 01373cam 2200361 a 4500 001 3965008 005
-		  20090811090946.0 008 940204s1991 cau 001 0 eng d 906
-		  $a7$bcbu$ccopycat$d2$encip$f19$gy-gencatlg 955 $apb07
-		  02-04-94 to Cat.; jf06 to subj 03-14-94; jf11 to sl
-		  03-14-94; jf14 04-13-94; aa00 05-16-94 010 $a 94114950 020
-		  $a0937175641 035 $9(DLC) 94114950 035 $a(OCoLC)26016189 040
-		  $aInMuB$cInMuB$dDLC 042 $alccopycat 050 00
-		  $aQA76.73.P22$bW35 1991 082 00 $a005.13/3$220 100 1 $aWall,
-		  Larry. 245 10 $aProgramming Perl /$cLarry Wall and Randal
-		  L. Schwartz. 250 $aMinor correction 260 $aSebastopol, CA
-		  :$bO'Reilly & Associates,$cc1991. 300 $axxi, 465 p. ;$c23
-		  cm. 440 2 $aA Nutshell handbook 500 $aAccompanied by
-		  booklet "Quick reference guide" (19 p. ; 21 cm) inserted at
-		  end. 500 $a"Unix programming"--Cover. 500 $aIncludes index.
-		  650 0 $aPerl (Computer program language) 700 1 $aSchwartz,
-		  Randal L. 856 42 $3Contributor biographical
-		  information$uhttp://www.loc.gov/catdir/enhancements/fy0915/94114950-b.html
-		  856 42 $3Publisher
-		  description$uhttp://www.loc.gov/catdir/enhancements/fy0915/94114950-d.html
-		  922 $aco 991 $bc-GenColl$hQA76.73.P22$iW35 1991$tCopy
-		  1$wBOOKS },
   bdsk-url-1	= {http://www.loc.gov/catdir/enhancements/fy0915/94114950-b.html}
 }
 
@@ -79,7 +44,7 @@
 }
 
 @Article{	  markoczygoldberg95:jom,
-  author	= {Mark{\'\i}czy, L{\'\i}via and Goldberg, Jeff},
+  author	= {Mark{\'o}czy, L{\'\i}via and Goldberg, Jeff},
   date-added	= {2016-11-23 21:03:13 +0000},
   date-modified	= {2016-11-23 21:03:54 +0000},
   journal	= {Journal of management},
